--- a/css/style.css
+++ b/css/style.css
@@ -772,13 +772,16 @@ y busque botones en otras páginas pero aun no me funciona bien*/
 
 .gp-pages-hero {
   padding: 40px 0 40px;
-  background: var(--gp-blue-dark) url("../img/bggpadel.png") center center no-repeat;
+  background: var(--gp-blue-dark) url("../img/bggpadel.png") no-repeat;
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;   /*  para centrar vertical + horizontal */
   flex-direction: column;
-  align-items: center;      /* horizontal */
-  justify-content: center;  /* vertical */
+  align-items: center;   
+  justify-content: center;  
   text-align: center;
-  min-height: 220px;        /* me asegura suficiente altura para centrar */
+  min-height: 220px;      
 }
 
 .gp-pages-hero h1 {
