--- a/sass/base/_helpers.scss
+++ b/sass/base/_helpers.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   3) HELPERS / UTILITIES (pocas, pero útiles)
+   3) HELPERS / UTILITIES
 =============================== */
 .gp-card{
   background:var(--gp-white);
