--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -19,7 +19,7 @@ body {
   background: var(--gp-white);
 }
 
-// Layout base (definido UNA sola vez)
+// Layout base
 .gp-layout {
   min-height: 100vh;
   display: flex;
