--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,7 +7,7 @@
   padding:50px 20px 30px;
   font-family:var(--gp-font);
   text-align:center;
-  margin-top:auto; /* empuja footer si falta contenido */
+  margin-top:auto;
 }
 .gp-footer-icon{
   font-size:42px;
