--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,18 +2,25 @@
 // GPADEL - SCSS
 // =========================================================
 
+// Base
 @use "base/variables";
 @use "base/mixins";
 @use "base/reset";
 @use "base/containers";
 @use "base/helpers";
 
+// Layout
 @use "layout/header";
-@use "components/buttons";
-@use "pages/home";
 @use "layout/footer";
 
+// Components
+@use "components/buttons";
 @use "components/search";
+@use "components/benefits";
+
+// Pages
+@use "pages/home";
+@use "pages/ayuda-jugadores";
 @use "pages/results";
 @use "pages/score";
 @use "pages/contact";
@@ -22,4 +29,5 @@
 @use "pages/torneos";
 @use "pages/construction";
 
+// Responsive
 @use "responsive";
