--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   5) BOTONES
+BOTONES
 =============================== */
 .gp-btn{
   display:inline-flex;
@@ -34,7 +34,7 @@
     color .2s ease-out,
     box-shadow .2s ease-out;
   /* Brillo */
-  
+
   &::before {
     content: '';
     position: absolute;
