--- a/sass/pages/_ayuda-jugadores.scss
+++ b/sass/pages/_ayuda-jugadores.scss
@@ -3,8 +3,7 @@ AYUDA A JUGADORES
 =============================== */
 
 
-/* APLICO TRANSICIÓN A LA IMAGEN PARA TP3
-=============================== */
+// Aplico la transición para esta entrega
 
 .gp-dashboard-image{
   overflow: hidden;
