--- a/sass/pages/_construction.scss
+++ b/sass/pages/_construction.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   15) SITIO EN CONSTRUCCIÓN
+SITIO EN CONSTRUCCIÓN
 =============================== */
 body.page-construction{
   background:url("../img/bggpadel.png") center center no-repeat;
