--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   11) PÁGINA: CONTACTO
+PÁGINA: CONTACTO
 =============================== */
 .gp-contact-main{ padding:40px 0 70px; }
 .gp-contact-inner{
