--- a/sass/pages/_entrada.scss
+++ b/sass/pages/_entrada.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   12) PÁGINA: ENTRADA
+PÁGINA: ENTRADA
 =============================== */
 body.gp-entrada{
   margin:0;
