--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   6) HOME: HERO + SECCIONES
+HOME: HERO + SECCIONES
 =============================== */
 .gp-hero{
   background:var(--gp-blue-dark) url("../img/bggpadel.png") center center no-repeat;
