--- a/sass/pages/_results.scss
+++ b/sass/pages/_results.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   9) RESULTADOS (CANCHAS)
+RESULTADOS (CANCHAS)
 =============================== */
 .gp-results{ padding:40px 0 60px; background:var(--gp-bg); }
 .gp-results-head h2{
