--- a/sass/pages/_score.scss
+++ b/sass/pages/_score.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   10) PÁGINAS: HERO GENÉRICO + SCORE TYPE
+PÁGINAS: HERO GENÉRICO + SCORE TYPE
 =============================== */
 .gp-pages-hero{
   width:100%;
