--- a/sass/pages/_torneos.scss
+++ b/sass/pages/_torneos.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   14) TORNEOS + SPONSORS
+TORNEOS + SPONSORS
 =============================== */
 .gp-torneos{ background:var(--gp-bg); padding:28px 0 70px; }
 body.gp-page-torneos .gp-torneos{ margin-top:20px; }
