--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   16) RESPONSIVE
+RESPONSIVE
 =============================== */
 
 /* <= 1400px */
@@ -119,7 +119,7 @@
 /* <= 768px */
 @media (max-width:768px){
   .gp-entrada-options{ grid-template-columns:1fr; }
-  
+
   .gp-sponsor img{ height:64px; }
 }
 
