--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   8) SEARCH (HOME / RESERVAR) + FLATPICKR
+SEARCH (HOME / RESERVAR) + FLATPICKR
 =============================== */
 .gp-search-bar-wrapper{
   border-top:1px solid rgba(15,23,42,.04);
