--- a/sass/pages/_login.scss
+++ b/sass/pages/_login.scss
@@ -1,5 +1,5 @@
 /* ===============================
-   13) LOGIN
+LOGIN
 =============================== */
 .gp-login{ background:var(--gp-bg); padding:42px 0 70px; }
 .gp-login-wrap{
