preentrega 3 - estructura final, sass y responsive

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,9 @@
 // GPADEL - SCSS
 // =========================================================
 
+// Entry point SCSS
+// Compila a css/style.css
+
 // Base
 @use "base/variables";
 @use "base/mixins";
